Colaboratory를 통해 생성됨

--- a/Consumption_Trends_2020/00_data_preprocessing.ipynb
+++ b/Consumption_Trends_2020/00_data_preprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_data_preprocessing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6tWTk0h6hWGSj4J2+8Zlb",
+      "authorship_tag": "ABX9TyOcA/D9Otqh0FGq51/iiwXg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Qgt2ofEnah3B",
-        "outputId": "a50b243a-fe25-4c3b-c384-1e6e12e727fb",
+        "outputId": "6733dd78-686d-4759-ca48-1f0230e73303",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -62,7 +62,7 @@
         "import matplotlib as mpl\n",
         "import matplotlib.font_manager as fm"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "EPOwwh6qblVg",
-        "outputId": "2df85bad-78c3-407f-be28-d00e02c79368",
+        "outputId": "48e69cf8-3505-4b0f-9251-59c7bb67f025",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -101,7 +101,7 @@
         "categories = list(categories)\n",
         "categories[:5]"
       ],
-      "execution_count": 75,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 3
         }
       ]
     },
@@ -121,7 +121,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "h5tMAcPXZk9E",
-        "outputId": "84fda0c1-d070-47fa-cad3-4b9ce48836b1",
+        "outputId": "01467dbe-4529-4213-a0c7-4d9777997d92",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -143,7 +143,7 @@
         "else:\n",
         "  print('데이터 병합 에러')"
       ],
-      "execution_count": 77,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "# 전체 원본 데이터 저장하기 (파일명: mcorp_all.csv)\n",
         "mcorp_all.to_csv('/content/gdrive/Shared drives/청년취업아카데미_KDX한국데이터거래소/Data/mcorp_all.csv', index=False)"
       ],
-      "execution_count": 78,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -258,18 +258,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "WVSdEVAudZjZ",
-        "outputId": "ea2ad97f-93e0-48fd-b934-bb04d3d54131",
+        "outputId": "572ed477-4e2b-4f81-ec9c-345c889a14aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "mcorp_all = pd.read_csv('/content/gdrive/Shared drives/청년취업아카데미_KDX한국데이터거래소/Data/Mcorp_all.csv', encoding='utf8')\n",
+        "mcorp_all = pd.read_csv('/content/gdrive/Shared drives/청년취업아카데미_KDX한국데이터거래소/Data/mcorp_all.csv', encoding='utf8')\n",
         "\n",
         "# 고객 연령대 값 확인\n",
         "mcorp_all.고객나이.unique()"
       ],
-      "execution_count": 79,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 7
         }
       ]
     },
@@ -290,7 +290,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "EMwkgyykbDDX",
-        "outputId": "064efc48-807f-47c4-f494-0ebf6b579330",
+        "outputId": "a3ef2ddd-e0e8-4004-96b9-02142d0729d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -299,7 +299,7 @@
         "mcorp = mcorp_all.copy()\n",
         "\n",
         "# 1.2.1. 연령대 수정하기\n",
-        "temp = mcorp[~mcorp['고객나이'].isin([0,-10,-20,-30,-40,-50,-60,-70])]\n",
+        "temp = mcorp[~mcorp['고객나이'].isin([0,-10,-20,-30,-40,-50,-60,-70,-80])]\n",
         "temp['고객나이'] = [70 if x>=70 else x for x in temp['고객나이']]\n",
         "mcorp = temp\n",
         "\n",
@@ -317,7 +317,7 @@
         "# 1.2.3. 컬럼명 변경하기\n",
         "mcorp.columns = ['소비일자','소비업종','성별','연령대','OS유형','소비금액','소비건수']"
       ],
-      "execution_count": 81,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "I4Vud-HRkHhz",
-        "outputId": "4d5bf5d6-eb97-4904-b6cd-4785df27a1b4",
+        "outputId": "1617b8bf-6658-436a-cf05-a03dd6d2b3fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -354,7 +354,7 @@
       "source": [
         "mcorp.head()"
       ],
-      "execution_count": 82,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -454,7 +454,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 9
         }
       ]
     },
@@ -467,7 +467,7 @@
         "# 최종 분석용 데이터 저장하기 (파일명: mcorp_edit.csv)\n",
         "mcorp.to_csv('/content/gdrive/Shared drives/청년취업아카데미_KDX한국데이터거래소/Data/mcorp_edit.csv', index=False)"
       ],
-      "execution_count": 83,
+      "execution_count": 10,
       "outputs": []
     }
   ]
